--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -39,8 +39,8 @@
 
 	<footer class="footer">
 		<div class="container text-center">
-			<a href="https://ctfd.io" class="text-secondary">
-				<small class="text-muted">Powered by CTFd</small>
+			<a href="https://astraeasolutions.com/" class="text-secondary">
+				<small class="text-muted">Powered by Astraea</small>
 			</a>
 		</div>
 	</footer>
