--- a/CTFd/themes/admin/templates/base.html
+++ b/CTFd/themes/admin/templates/base.html
@@ -135,9 +135,9 @@
 
 	<footer class="footer pt-2">
 		<div class="container text-center">
-			<a href="https://ctfd.io" class="text-secondary">
+			<a href="https://astraeasolutions.com" class="text-secondary">
 				<small class="text-muted">
-					Powered by CTFd
+					Powered by Astraea
 				</small>
 			</a>
 			<span>
