--- a/CTFd/themes/core-beta/templates/base.html
+++ b/CTFd/themes/core-beta/templates/base.html
@@ -48,9 +48,9 @@
 
 <footer class="footer">
   <div class="container text-center">
-    <a href="https://ctfd.io" class="text-secondary">
+    <a href="https://astraeasolutions.com" class="text-secondary">
       <small class="text-muted">
-        {% trans %}Powered by CTFd{% endtrans %}
+        {% trans %}Powered by Astraea{% endtrans %}
       </small>
     </a>
   </div>
