--- a/CTFd/themes/core-beta/templates/scoreboard.html
+++ b/CTFd/themes/core-beta/templates/scoreboard.html
@@ -30,19 +30,26 @@
       </template>
 
       <div class="col-md-12" x-show="standings.length">
-        <table class="table table-striped align-middle">
-          <thead>
+        <table class="table table-striped table-hover align-middle text-center">
+          <thead class="table-dark">
           <tr>
-            <th style="width: 10px">{% trans %}Place{% endtrans %}</th>
-            <th class="text-start ps-3">{{ get_mode_as_word(capitalize=True) }}</th>
-            <th>{% trans %}Score{% endtrans %}</th>
+            <th style="width: 10%">Rank</th>
+            <th class="text-start ps-3">Team/Individual Name</th>
+            <th>Points</th>
+            <th>No. of Prob Solved</th>
+            <th>Institute Name</th>
           </tr>
           </thead>
 
           <tbody>
             <template x-for="(standing, index) in standings.filter(i => activeBracket ? i.bracket_id==activeBracket : true)">
               <tr>
-                <th scope="row" class="text-center" x-text="index + 1"></th>
+                <th scope="row" class="text-center">
+                  <template x-if="index === 0">🥇</template>
+                  <template x-if="index === 1">🥈</template>
+                  <template x-if="index === 2">🥉</template>
+                  <template x-if="index > 2" ><span x-text="index + 1"></span></template>
+                </th>
                 <td class="text-start">
                   <a :href="standing.account_url" x-text="standing.name"></a>
                   <template x-if="standing.bracket_name">
@@ -50,6 +57,8 @@
                   </template>
                 </td>
                 <td x-text="standing.score"></td>
+                <td x-text="standing.num_solved !== undefined ? standing.num_solved : '—'"></td>
+                <td x-text="standing.institute !== undefined ? standing.institute : '—'"></td>
               </tr>
             </template>
           </tbody>
