--- a/CTFd/themes/core-beta/templates/scoreboard.html
+++ b/CTFd/themes/core-beta/templates/scoreboard.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block content %}
   <div class="jumbotron">
     <div class="container">
@@ -10,13 +9,11 @@
   </div>
   <div class="container">
     {% include "components/errors.html" %}
-
     <div id="score-graph" class="align-items-center" :class="{'d-flex': show, 'd-none': !show}" x-data="ScoreboardDetail" x-ref="scoregraph" @bracket-change.window="activeBracket=$event.detail; update();">
       <div class="col-md-12 text-center">
         <i class="fas fa-circle-notch fa-spin fa-3x fa-fw spinner"></i>
       </div>
     </div>
-
     <div id="scoreboard" class="row" x-data="ScoreboardList">
       <template x-if="brackets.length && standings.length">
         <div class="col-md-12 py-3">
@@ -28,27 +25,40 @@
           </nav>
         </div>
       </template>
-
       <div class="col-md-12" x-show="standings.length">
-        <table class="table table-striped table-hover align-middle text-center">
-          <thead class="table-dark">
+        <table class="table table-striped align-middle">
+          <thead>
           <tr>
-            <th style="width: 10%">Rank</th>
-            <th class="text-start ps-3">Team/Individual Name</th>
-            <th>Points</th>
-            <th>No. of Prob Solved</th>
-            <th>Institute Name</th>
+            <th style="width: 10px">{% trans %}Rank{% endtrans %}</th>
+            <th class="text-start ps-3">{{ get_mode_as_word(capitalize=True) }}</th>
+            <th>{% trans %}Institute{% endtrans %}</th>
+            <th>{% trans %}Score{% endtrans %}</th>
           </tr>
           </thead>
-
           <tbody>
             <template x-for="(standing, index) in standings.filter(i => activeBracket ? i.bracket_id==activeBracket : true)">
-              <tr>
+              <tr x-data="{ 
+                filteredStandings: standings.filter(i => activeBracket ? i.bracket_id==activeBracket : true),
+                uniqueScores: [...new Set(standings.filter(i => activeBracket ? i.bracket_id==activeBracket : true).map(s => s.score))].sort((a, b) => b - a),
+                scoreRank: [...new Set(standings.filter(i => activeBracket ? i.bracket_id==activeBracket : true).map(s => s.score))].sort((a, b) => b - a).indexOf(standing.score) + 1
+              }">
                 <th scope="row" class="text-center">
-                  <template x-if="index === 0">🥇</template>
-                  <template x-if="index === 1">🥈</template>
-                  <template x-if="index === 2">🥉</template>
-                  <template x-if="index > 2" ><span x-text="index + 1"></span></template>
+                  <!-- Gold Medal for highest score -->
+                  <template x-if="scoreRank === 1">
+                    <span class="text-warning fs-4">🥇</span>
+                  </template>
+                  <!-- Silver Medal for second highest score -->
+                  <template x-if="scoreRank === 2">
+                    <span class="text-secondary fs-4">🥈</span>
+                  </template>
+                  <!-- Bronze Medal for third highest score -->
+                  <template x-if="scoreRank === 3">
+                    <span class="text-warning fs-4">🥉</span>
+                  </template>
+                  <!-- No medal for others -->
+                  <template x-if="scoreRank > 3">
+                    <span class="text-muted">-</span>
+                  </template>
                 </th>
                 <td class="text-start">
                   <a :href="standing.account_url" x-text="standing.name"></a>
@@ -56,22 +66,19 @@
                     <span class="badge bg-secondary ms-2" x-text="standing.bracket_name"></span>
                   </template>
                 </td>
+                <td x-text="standing.affiliation || standing.institute || '-'"></td>
                 <td x-text="standing.score"></td>
-                <td x-text="standing.num_solved !== undefined ? standing.num_solved : '—'"></td>
-                <td x-text="standing.institute !== undefined ? standing.institute : '—'"></td>
               </tr>
             </template>
           </tbody>
         </table>
       </div>
-
       <div class="col-md-12" x-show="! standings.length">
         <h3 class="text-center text-muted">{% trans %}Scoreboard is empty{% endtrans %}</h3>
       </div>
     </div>
   </div>
 {% endblock %}
-
 {% block scripts %}
   {{ Assets.js("assets/js/scoreboard.js") }}
 {% endblock %}
