--- a/CTFd/themes/core-beta/templates/components/navbar.html
+++ b/CTFd/themes/core-beta/templates/components/navbar.html
@@ -59,6 +59,12 @@
             {% trans %}Challenges{% endtrans %}
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('views.static_html', route='/about') }}">
+            {% trans %}About{% endtrans %}
+          </a>
+        </li>
       </ul>
 
       <hr class="d-sm-flex d-md-flex d-lg-none">
