--- a/CTFd/themes/core/templates/challenges.html
+++ b/CTFd/themes/core/templates/challenges.html
@@ -21,6 +21,21 @@
 		</div>
 	</div>
 
+	<!-- Progress Bar -->
+	<div class="container my-4">
+		<div class="progress" style="height: 30px;">
+			<div
+				class="progress-bar"
+				role="progressbar"
+				id="challenge-progress"
+				style="width: 0%"
+				aria-valuenow="0"
+				aria-valuemin="0"
+				aria-valuemax="0"
+			></div>
+		</div>
+	</div>
+
 	<div id='challenges-board'>
 		<div class="min-vh-50 d-flex align-items-center">
 			<div class="text-center w-100">
