fixes removed monthly solve

--- a/CTFd/themes/core-beta/templates/base.html
+++ b/CTFd/themes/core-beta/templates/base.html
@@ -59,8 +59,8 @@
         <a href="admin" class="btn btn-primary btn-lg">Click here to login and setup your CTF</a>
       </div>
 
-      <div class="row text-center mb-4 g-3">
-        <div class="col-12 col-sm-6 col-md-3">
+      <div class="row text-center mb-4 g-3 justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h6 class="card-title text-muted">Total Challenges</h6>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h6 class="card-title text-muted">Total users</h6>
@@ -102,7 +102,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-3">
+        <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h6 class="card-title text-muted">Total Solves</h6>
@@ -124,14 +124,6 @@
                   })();
                 });
               </script>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-3">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h6 class="card-title text-muted">Monthly Solves</h6>
-              <p class="card-text display-6 fw-bold text-nowrap" style="white-space:nowrap;">1,567</p>
             </div>
           </div>
         </div>
